<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_account">Create Account</string>
    <string name="welcome">Welcome</string>
    <string name="btn_get_started">get started</string>
    <string name="btn_continue">continue</string>
    <string name="step2">step2</string>
    <string name="step1">step1</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="logout">Logout</string>
</resources>
